# AtherisWeb

./: CMakeLists.txt  LICENSE  README.md
compiler/html/: htmlLexer.cpp  htmlLexer.hpp
core/: main.cpp
core/mainApp/: MainApp.cpp  MainApp.hpp
render/: mainRender.cpp  mainRender.hpp
render/mainWindow/: compile.sh  mainWindow.cpp  mainWindow.hpp
render/mainWindow/fragment/: baseShader.frag
render/mainWindow/vertex/: baseShader.vert  vert.spv
render/shapes/: fontLoader.hpp
url/: UrlGetter.cpp  UrlGetter.hpp
usual/: files.hpp  logger.hpp
